--- a/assets/lagunita/css/base.dev.css
+++ b/assets/lagunita/css/base.dev.css
@@ -720,11 +720,11 @@ ul.vbar li:last-of-type {
 }
 /* line 24, themes/lagunita/less/_header.less */
 .no-brand-bar #header {
-  border-top: 10px solid #8c1515;
+  border-top: 10px solid #000000;
 }
 /* line 29, themes/lagunita/less/_header.less */
 #brandbar {
-  background: #8c1515;
+  background: #000000;
   box-shadow: inset 0 -4px 8px -2px rgba(0, 0, 0, 0.2);
   /* Horizontal offset , vertical offset, blur, internal spacing */
   min-height: 30px;
