--- a/assets/lagunita/css/base.css
+++ b/assets/lagunita/css/base.css
@@ -604,10 +604,10 @@ ul.vbar li:last-of-type {
   display: none;
 }
 .no-brand-bar #header {
-  border-top: 10px solid #8c1515;
+  border-top: 10px solid #000000;
 }
 #brandbar {
-  background: #8c1515;
+  background: #000000;
   box-shadow: inset 0 -4px 8px -2px rgba(0, 0, 0, 0.2);
   /* Horizontal offset , vertical offset, blur, internal spacing */
   min-height: 30px;
@@ -618,6 +618,10 @@ ul.vbar li:last-of-type {
 }
 #brandbar .container:after {
   clear: both;
+}
+#brandbar .name {
+  font-size: 1.2em;
+  color: inherit;
 }
 #header {
   z-index: 999;
